# acr

./: .gitignore  Cargo.toml  INTEGRATION_TESTS.md  README.md  build.rs  build.sh  run-test.sh
.github/workflows/: codeql.yml  debian.yml  rust.yml
configs/: audiocontrol.json
debian/: audiocontrol.service  changelog  control  copyright  dirs  hifiberry-audiocontrol.lintian-overrides  manpages  rules
debian/man/: acr_dump_cache.1  audiocontrol.1  audiocontrol_dump_store.1  audiocontrol_favourites.1  audiocontrol_lms_client.1  audiocontrol_scan_library.1  audiocontrol_send_update.1
debian/source/: options
doc/: README.md  acr_dump_cache.md  acr_dump_store.md  acr_favourites.md  api.md  caching.md  cli_tools.md  controller_state_machines.md  helpers.md  metadata.md
example/rust/: lyrics_example.rs
example/web/: player-functions.js  spotify.html  websocket.html
integration_test/: requirements.txt
integration_tests/: README.md  cleanup_tests.py  conftest.py  requirements.txt  run_tests.py  test_activemonitor_integration.py  test_backgroundjobs_integration.py  test_cache_integration.py  test_config_activemonitor.json  test_config_cache.json  test_config_fanarttv.json  test_config_generic.json  test_config_librespot.json  test_config_theaudiodb.json  test_config_volume.json  test_coverart_integration.py  test_exclusive_playback_integration.py  test_fanarttv.py  test_favourites_integration.py  test_generic_integration.md  test_generic_integration.py  test_librespot_integration.py  test_m3u_integration.py  test_mpd_backgroundjobs_integration.py  test_raat_integration.py  test_settings_integration.py  test_theaudiodb.py  test_volume_integration.py  venv_bootstrap.py
integration_tests/test_cache_18080/attributes/: cache_attributes.db
integration_tests/test_cache_18080/settings.db/: settings.db
integration_tests/testdata/m3u/: extended.m3u  simple.m3u
src/: config.rs  lib.rs  logging.rs  main.rs
src/api/: background_jobs.rs  backgroundjobs.rs  cache.rs  coverart.rs  events.rs  favourites.rs  image_cache.rs  library.rs  m3u.rs  mod.rs  players.rs  server.rs  settings.rs
src/audiocontrol/: audiocontrol.rs  event_bus.rs  mod.rs
src/data/: album.rs  album_artists.rs  library.rs  loop_mode.rs  metadata.rs  player.rs  player_command.rs  player_update.rs  serializable.rs  song.rs  stream_details.rs  system_event.rs  track.rs
src/helpers/: album_updater.rs  artist_splitter.rs  artist_store.rs  artist_updater.rs  attribute_cache.rs  background_jobs.rs  bluez.rs  configurator.rs  coverart.rs  coverart_providers.rs  fanarttv.rs  favourites.rs  genre_cleanup.rs  global_volume.rs  http_client.rs  image_cache.rs  image_grader.rs  image_meta.rs  lastfm.rs  local_coverart.rs  lyrics.rs  m3u.rs  mac_address.rs  memory_report.rs  mod.rs  mpris.rs  musicbrainz.rs  playback_progress.rs  process_helper.rs  rate_limit.rs  retry.rs  sanitize.rs  security_store.rs  settings_db.rs  settingsdb.rs  shairportsync_messages.rs  song_split_manager.rs  song_title_splitter.rs  spotify.rs  stream_helper.rs  (+4 more)
src/players/: event_api.rs  mod.rs  null_controller.rs  player_controller.rs  player_factory.rs
src/players/bluetooth/: bluetooth.rs  mod.rs  tests.rs
src/players/generic/: generic_controller.rs  mod.rs  tests.rs
src/players/librespot/: librespot.rs  mod.rs
src/players/lms/: cli_listener.rs  json_rps.rs  library.rs  library_loader.rs  lms_audio.rs  lms_player.rs  lms_server.rs  mapping.rs  mod.rs  player_finder.rs
src/players/mpd/: library.rs  library_loader.rs  mod.rs  mpd.rs
src/players/mpris/: mod.rs
src/players/raat/: metadata_pipe_reader.rs  mod.rs  raat.rs
src/players/shairport/: mod.rs  shairport.rs
src/plugins/: action_plugin.rs  mod.rs  plugin.rs  plugin_factory.rs
src/plugins/action_plugins/: active_monitor.rs  event_logger.rs  lastfm.rs  mod.rs
src/tools/: acr_dump_cache.rs  acr_dump_store.rs  acr_favourites.rs  acr_get_mpris_state.rs  acr_list_mpris_players.rs  acr_listen_shairportsync.rs  acr_lms_client.rs  acr_monitor_mpris_state.rs  acr_musicbrainz_client.rs  acr_notify_librespot.rs  acr_player_event_client.rs  acr_scan_library.rs  acr_send_update.rs  mod.rs
testdata/: generate_sine_album.sh  testdata.txt
tests/: build_script_logic.rs  tools_mod_consistency.rs
